--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   	<module>hedwig-client</module>
   	<module>hedwig-server</module>
   	<module>hedwig-protocol</module>
-  	<module>bookkeeper</module>
+  	<module>bookkeeper-server</module>
   	<module>bookkeeper-benchmark</module>
   </modules>
   <repositories>
