--- a/hedwig-client/pom.xml
+++ b/hedwig-client/pom.xml
@@ -19,18 +19,16 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.hedwig</groupId>
-    <artifactId>hedwig</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>org.apache.bookkeeper</groupId>
+    <artifactId>bookkeeper</artifactId>
+    <version>3.4.0-SNAPSHOT</version>
   </parent>
   <properties>
       <mainclass>org.apache.hedwig.client.App</mainclass>
   </properties>
-  <groupId>org.apache.hedwig</groupId>
-  <artifactId>client</artifactId>
+  <artifactId>hedwig-client</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>client</name>
+  <name>hedwig-client</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -40,9 +38,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.hedwig</groupId>
-      <artifactId>protocol</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <groupId>org.apache.bookkeeper</groupId>
+      <artifactId>hedwig-protocol</artifactId>
+      <version>3.4.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -78,9 +76,11 @@
   </dependencies>
   <repositories>
     <repository>
-      <id>jboss.release</id>
-      <name>JBoss releases</name>
-      <url>http://repository.jboss.org/maven2</url>
+      <id>repository.jboss.org</id>
+      <url>>http://repository.jboss.org/nexus/content/groups/public/</url>
+       <snapshots>
+         <enabled>false</enabled>
+       </snapshots>
     </repository>
   </repositories>
 </project>
