--- a/hedwig-server/pom.xml
+++ b/hedwig-server/pom.xml
@@ -19,18 +19,17 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.hedwig</groupId>
-    <artifactId>hedwig</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>org.apache.bookkeeper</groupId>
+    <artifactId>bookkeeper</artifactId>
+    <version>3.4.0-SNAPSHOT</version>
   </parent>
   <properties>
       <mainclass>org.apache.hedwig.server.netty.PubSubServer</mainclass>
   </properties>
-  <groupId>org.apache.hedwig</groupId>
-  <artifactId>server</artifactId>
+  <artifactId>hedwig-server</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>server</name>
+  <version>3.4.0-SNAPSHOT</version>
+  <name>hedwig-server</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -40,9 +39,9 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.hedwig</groupId>
-      <artifactId>client</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <groupId>org.apache.bookkeeper</groupId>
+      <artifactId>hedwig-client</artifactId>
+      <version>3.4.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -61,12 +60,12 @@
       <groupId>org.apache.zookeeper</groupId>
       <artifactId>zookeeper-test</artifactId>
       <version>3.4.0</version>
-      <scope>compile</scope>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.bookkeeper</groupId>
-      <artifactId>bookkeeper</artifactId>
-      <version>3.4.0</version>
+      <artifactId>bookkeeper-server</artifactId>
+      <version>3.4.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
