--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -52,6 +52,7 @@
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-surefire-plugin</artifactId>
+	<version>2.9</version>
 	<configuration>
 	  <forkMode>pertest</forkMode>
 	</configuration>
