--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
   	<module>bookkeeper-server</module>
   	<module>bookkeeper-benchmark</module>
   </modules>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
   <repositories>
   </repositories>
   <url>http://zookeeper.apache.org/bookkeeper</url>
@@ -44,6 +48,11 @@
           <source>1.6</source>
           <target>1.6</target>
         </configuration>
+      </plugin>
+      <plugin>
+      	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-surefire-plugin</artifactId>
+	<version>2.9</version>
       </plugin>
     </plugins>
   </build>
