BOOKKEEPER-27: mvn site failed with unresolved dependencies (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1152529 13f79535-47bb-0310-9956-ffa450edef68

--- a/hedwig-client/pom.xml
+++ b/hedwig-client/pom.xml
@@ -41,6 +41,7 @@
       <groupId>org.apache.bookkeeper</groupId>
       <artifactId>hedwig-protocol</artifactId>
       <version>3.4.0-SNAPSHOT</version>
+      <type>jar</type>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -68,9 +69,9 @@
     </dependency>
     <dependency>
     	<groupId>org.apache.bookkeeper</groupId>
-    	<artifactId>bookkeeper</artifactId>
+    	<artifactId>bookkeeper-server</artifactId>
     	<version>3.4.0-SNAPSHOT</version>
-    	<type>pom</type>
+    	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
   </dependencies>
