--- a/bookkeeper-benchmark/pom.xml
+++ b/bookkeeper-benchmark/pom.xml
@@ -52,6 +52,7 @@
       <groupId>org.apache.bookkeeper</groupId>
       <artifactId>bookkeeper-server</artifactId>
       <version>3.4.0-SNAPSHOT</version>
+      <type>jar</type>
       <scope>compile</scope>
     </dependency>
   </dependencies>
