--- a/hedwig-server/pom.xml
+++ b/hedwig-server/pom.xml
@@ -43,6 +43,7 @@
       <artifactId>hedwig-client</artifactId>
       <version>3.4.0-SNAPSHOT</version>
       <scope>compile</scope>
+      <type>jar</type>
     </dependency>
     <dependency>
     	<groupId>org.apache.derby</groupId>
@@ -67,6 +68,7 @@
       <artifactId>bookkeeper-server</artifactId>
       <version>3.4.0-SNAPSHOT</version>
       <scope>compile</scope>
+      <type>jar</type>
     </dependency>
   </dependencies>
   <build>
