BOOKKEEPER-18: maven build is unstable (morel, ivank via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1162913 13f79535-47bb-0310-9956-ffa450edef68

--- a/hedwig-server/pom.xml
+++ b/hedwig-server/pom.xml
@@ -28,7 +28,6 @@
   </properties>
   <artifactId>hedwig-server</artifactId>
   <packaging>jar</packaging>
-  <version>3.4.0-SNAPSHOT</version>
   <name>hedwig-server</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -41,7 +40,7 @@
     <dependency>
       <groupId>org.apache.bookkeeper</groupId>
       <artifactId>hedwig-client</artifactId>
-      <version>3.4.0-SNAPSHOT</version>
+      <version>${project.parent.version}</version>
       <scope>compile</scope>
       <type>jar</type>
     </dependency>
@@ -66,7 +65,7 @@
     <dependency>
       <groupId>org.apache.bookkeeper</groupId>
       <artifactId>bookkeeper-server</artifactId>
-      <version>3.4.0-SNAPSHOT</version>
+      <version>${project.parent.version}</version>
       <scope>compile</scope>
       <type>jar</type>
     </dependency>
