--- a/bookkeeper-benchmark/pom.xml
+++ b/bookkeeper-benchmark/pom.xml
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>org.apache.bookkeeper</groupId>
       <artifactId>bookkeeper-server</artifactId>
-      <version>3.4.0-SNAPSHOT</version>
+      <version>${project.parent.version}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
