--- a/hedwig-client/pom.xml
+++ b/hedwig-client/pom.xml
@@ -40,7 +40,7 @@
     <dependency>
       <groupId>org.apache.bookkeeper</groupId>
       <artifactId>hedwig-protocol</artifactId>
-      <version>3.4.0-SNAPSHOT</version>
+      <version>${project.parent.version}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
@@ -70,7 +70,7 @@
     <dependency>
     	<groupId>org.apache.bookkeeper</groupId>
     	<artifactId>bookkeeper-server</artifactId>
-    	<version>3.4.0-SNAPSHOT</version>
+	<version>${project.parent.version}</version>
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
