--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -57,6 +57,20 @@
 	  <forkMode>pertest</forkMode>
 	</configuration>
       </plugin>
+      <plugin>
+	<artifactId>maven-dependency-plugin</artifactId>
+	<executions>
+	  <execution>
+	    <phase>package</phase>
+	    <goals>
+	      <goal>copy-dependencies</goal>
+	    </goals>
+	    <configuration>
+	      <outputDirectory>${basedir}/lib</outputDirectory>
+	    </configuration>
+	  </execution>
+	</executions>
+      </plugin>
     </plugins>
   </build>
   <repositories>
