--- a/hedwig-server/pom.xml
+++ b/hedwig-server/pom.xml
@@ -126,6 +126,20 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+	<artifactId>maven-dependency-plugin</artifactId>
+	<executions>
+	  <execution>
+	    <phase>package</phase>
+	    <goals>
+	      <goal>copy-dependencies</goal>
+	    </goals>
+	    <configuration>
+	      <outputDirectory>${basedir}/lib</outputDirectory>
+	    </configuration>
+	  </execution>
+	</executions>
+      </plugin>
     </plugins>
   </build>
 </project>
