--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.8</version>
 	<configuration>
+	  <subpackages>org.apache.bookkeeper.client</subpackages>
           <groups>
 	    <group>
               <title>Bookkeeper</title>
