--- a/hedwig-client/pom.xml
+++ b/hedwig-client/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.bookkeeper</groupId>
     <artifactId>bookkeeper</artifactId>
-    <version>3.4.0-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
   </parent>
   <properties>
       <mainclass>org.apache.hedwig.client.App</mainclass>
@@ -64,7 +64,7 @@
     <dependency>
     	<groupId>org.apache.zookeeper</groupId>
     	<artifactId>zookeeper</artifactId>
-    	<version>3.3.3</version>
+    	<version>3.4.0-BK-SNAPSHOT</version>
     	<type>jar</type>
     </dependency>
     <dependency>
@@ -75,13 +75,4 @@
     	<scope>compile</scope>
     </dependency>
   </dependencies>
-  <repositories>
-    <repository>
-      <id>repository.jboss.org</id>
-      <url>>http://repository.jboss.org/nexus/content/groups/public/</url>
-       <snapshots>
-         <enabled>false</enabled>
-       </snapshots>
-    </repository>
-  </repositories>
 </project>
