--- a/hedwig-server/pom.xml
+++ b/hedwig-server/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.bookkeeper</groupId>
     <artifactId>bookkeeper</artifactId>
-    <version>3.4.0-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
   </parent>
   <properties>
       <mainclass>org.apache.hedwig.server.netty.PubSubServer</mainclass>
@@ -53,13 +53,13 @@
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
       <artifactId>zookeeper</artifactId>
-      <version>3.4.0</version>
+      <version>3.4.0-BK-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
       <artifactId>zookeeper-test</artifactId>
-      <version>3.4.0</version>
+      <version>3.4.0-BK-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
