--- a/hedwig-server/pom.xml
+++ b/hedwig-server/pom.xml
@@ -38,6 +38,17 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.6.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.6.4</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.apache.bookkeeper</groupId>
       <artifactId>hedwig-client</artifactId>
       <version>${project.parent.version}</version>
@@ -68,6 +79,36 @@
       <version>${project.parent.version}</version>
       <scope>compile</scope>
       <type>jar</type>
+    </dependency>
+    <!--
+	Annoying dependency we need to include because
+	zookeeper uses log4j and so we transatively do, but
+	log4j has some dependencies which aren't in the 
+	default maven repositories
+    //-->
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.15</version>
+      <scope>provided</scope>
+      <exclusions>
+	<exclusion>
+	  <groupId>javax.mail</groupId>
+	  <artifactId>mail</artifactId>
+	</exclusion>
+	<exclusion>
+	  <groupId>javax.jms</groupId>
+	  <artifactId>jms</artifactId>
+	</exclusion>
+	<exclusion>
+	  <groupId>com.sun.jdmk</groupId>
+	  <artifactId>jmxtools</artifactId>
+	</exclusion>
+	<exclusion>
+	  <groupId>com.sun.jmx</groupId>
+	  <artifactId>jmxri</artifactId>
+	</exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
   <build>
