--- a/hedwig-server/pom.xml
+++ b/hedwig-server/pom.xml
@@ -181,6 +181,14 @@
 	  </execution>
 	</executions>
       </plugin>
+      <plugin>
+      	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-surefire-plugin</artifactId>
+	<version>2.9</version>
+	<configuration>
+	  <argLine>-Xmx1G</argLine>
+	</configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
