BOOKKEEPER-90: Hedwig API changes for initial Bookkeeper release (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1203380 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,8 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.8</version>
 	<configuration>
-	  <subpackages>org.apache.bookkeeper.client</subpackages>
+	  <additionalparam>-exclude org.apache.hedwig.client.netty:org.apache.hedwig.client.benchmark:org.apache.hedwig.client.data:org.apache.hedwig.client.exceptions:org.apache.hedwig.client.handlers:org.apache.hedwig.client.ssl</additionalparam>
+	  <subpackages>org.apache.bookkeeper.client:org.apache.hedwig.client:org.apache.hedwig.util:org.apache.hedwig.protocol:org.apache.hedwig.exceptions</subpackages>
           <groups>
 	    <group>
               <title>Bookkeeper</title>
