BOOKKEEPER-119: Keys in configuration have inconsistent style (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1207396 13f79535-47bb-0310-9956-ffa450edef68

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -23,20 +23,20 @@
 ## Bookie settings
 
 # Port that bookie server listen on
-bookie_port=3181
+bookiePort=3181
 
 # Directory Bookkeeper outputs its write ahead log
-journal_dir=/tmp/bk-txn
+journalDirectory=/tmp/bk-txn
 
 # Directory Bookkeeper outputs ledger snapshots
 # could define multi directories to store snapshots, separated by ','
 # For example:
-# ledger_dirs=/tmp/bk1-data,/tmp/bk2-data
+# ledgerDirectories=/tmp/bk1-data,/tmp/bk2-data
 # 
 # Ideally ledger dirs and journal dir are each in a differet device,
 # which reduce the contention between random i/o and sequential write.
 # It is possible to run with a single disk, but performance will be significantly lower.
-ledger_dirs=/tmp/bk-data
+ledgerDirectories=/tmp/bk-data
 
 # Max file size of entry logger, in bytes
 # A new entry log file will be created when the old one reaches the file size limitation
@@ -44,11 +44,13 @@ ledger_dirs=/tmp/bk-data
 
 # Max file size of journal file, in mega bytes
 # A new journal file will be created when the old one reaches the file size limitation
-# journal_max_size_mb=2048
+#
+# journalMaxSizeMB=2048
 
 # Max number of old journal file to kept
 # Keep a number of old journal files would help data recovery in specia case
-# journal_max_backups=5
+#
+# journalMaxBackups=5
 
 # How long the interval to trigger next garbage collection, in milliseconds
 # Since garbage collection is running in background, too frequent gc
@@ -64,10 +66,12 @@ ledger_dirs=/tmp/bk-data
 # on too frequent flushing. You can consider increment flush interval
 # to get better performance, but you need to pay more time on bookie
 # server restart after failure.
-# flush_interval=100
+#
+# flushInterval=100
 
 # Interval to watch whether bookie is dead or not, in milliseconds
-# bookie_death_watch_interval=1000
+#
+# bookieDeathWatchInterval=1000
 
 ## zookeeper client settings
 
@@ -91,7 +95,8 @@ zkTimeout=10000
 # a single IP packet, setting server.tcpnodelay to false to enable Nagle algorithm
 # can provide better performance.
 # Default value is true.
-# server.tcpnodelay=true
+#
+# serverTcpNoDelay=true
 
 ## ledger cache settings
 
