--- a/hedwig-server/pom.xml
+++ b/hedwig-server/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0"?>
 <!--
    Licensed to the Apache Software Foundation (ASF) under one or more
    contributor license agreements.  See the NOTICE file distributed with
@@ -113,6 +114,16 @@
   </dependencies>
   <build>
     <plugins>
+      <plugin>
+	<groupId>org.apache.rat</groupId>
+	<artifactId>apache-rat-plugin</artifactId>
+	<version>0.7</version>
+	<configuration>
+	  <excludes>
+	    <exclude>**/p12.pass</exclude>
+	  </excludes>
+	</configuration>
+      </plugin>
 <!--
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
