--- a/bookkeeper-benchmark/pom.xml
+++ b/bookkeeper-benchmark/pom.xml
@@ -52,14 +52,14 @@
     <dependency>
     	<groupId>org.apache.zookeeper</groupId>
     	<artifactId>zookeeper</artifactId>
-    	<version>3.4.0-BK-SNAPSHOT</version>
+    	<version>3.4.0</version>
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
     <dependency>
     	<groupId>org.apache.zookeeper</groupId>
     	<artifactId>zookeeper-test</artifactId>
-    	<version>3.4.0-BK-SNAPSHOT</version>
+    	<version>3.4.0</version>
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
