--- a/hedwig-client/pom.xml
+++ b/hedwig-client/pom.xml
@@ -70,7 +70,7 @@
     <dependency>
     	<groupId>org.apache.zookeeper</groupId>
     	<artifactId>zookeeper</artifactId>
-    	<version>3.4.0-BK-SNAPSHOT</version>
+    	<version>3.4.0</version>
     	<type>jar</type>
     </dependency>
     <dependency>
