--- a/hedwig-server/pom.xml
+++ b/hedwig-server/pom.xml
@@ -65,13 +65,13 @@
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
       <artifactId>zookeeper</artifactId>
-      <version>3.4.0-BK-SNAPSHOT</version>
+      <version>3.4.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
       <artifactId>zookeeper-test</artifactId>
-      <version>3.4.0-BK-SNAPSHOT</version>
+      <version>3.4.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
