BOOKKEEPER-122: Review BookKeeper server documentation (fpj & ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1208123 13f79535-47bb-0310-9956-ffa450edef68

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -40,7 +40,7 @@ ledgerDirectories=/tmp/bk-data
 
 # Ledger Manager Class
 # What kind of ledger manager is used to manage how ledgers are stored, managed
-# and garbage collected. Try to read 'BookKeeper Overview' for detail info.
+# and garbage collected. Try to read 'BookKeeper Internals' for detail info.
 # ledgerManagerType=flat
 
 # Root zookeeper path to store ledger metadata
