BOOKKEEPER-131: Fix zookeeper test dependency (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.0@1209236 13f79535-47bb-0310-9956-ffa450edef68

--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -55,9 +55,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
-      <artifactId>zookeeper-test</artifactId>
+      <artifactId>zookeeper</artifactId>
       <version>3.4.0</version>
-      <scope>compile</scope>
+      <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.netty</groupId>
