--- a/bookkeeper-benchmark/pom.xml
+++ b/bookkeeper-benchmark/pom.xml
@@ -58,10 +58,10 @@
     </dependency>
     <dependency>
     	<groupId>org.apache.zookeeper</groupId>
-    	<artifactId>zookeeper-test</artifactId>
+    	<artifactId>zookeeper</artifactId>
     	<version>3.4.0</version>
-    	<type>jar</type>
-    	<scope>compile</scope>
+    	<type>test-jar</type>
+    	<scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.netty</groupId>
