BOOKKEEPER-77: Add a console client for hedwig (Sijie Guo via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1241858 13f79535-47bb-0310-9956-ffa450edef68

--- a/hedwig-server/pom.xml
+++ b/hedwig-server/pom.xml
@@ -110,6 +110,11 @@
 	</exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>jline</groupId>
+      <artifactId>jline</artifactId>
+      <version>0.9.94</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
