BOOKKEEPER-168: Message bounding on subscriptions (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1300510 13f79535-47bb-0310-9956-ffa450edef68

--- a/hedwig-client/src/main/cpp/scripts/log4cxx.conf
+++ b/hedwig-client/src/main/cpp/scripts/log4cxx.conf
@@ -38,12 +38,12 @@ log4j.appender.hedwigtest.layout=org.apache.log4j.PatternLayout
 log4j.appender.hedwigtest.layout.ConversionPattern=%.5m%n
 
 # category
-log4j.category.hedwig=DEBUG, hedwig
-log4j.rootCategory=DEBUG
+log4j.category.hedwig=INFO, hedwig
+log4j.rootCategory=INFO
 
 #log4j.category.hedwig.channel=ERROR
 log4j.category.hedwig.util=ERROR
 log4j.category.hedwigtest.servercontrol=ERROR
 
-log4j.category.hedwigtest=DEBUG, hedwigtest
-log4j.rootCategory=DEBUG
+log4j.category.hedwigtest=INFO, hedwigtest
+log4j.rootCategory=INFO
