BOOKKEEPER-145: Put notice and license file for distributed binaries in SVN (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1338616 13f79535-47bb-0310-9956-ffa450edef68

--- a/hedwig-client/pom.xml
+++ b/hedwig-client/pom.xml
@@ -114,6 +114,13 @@
   <build>
     <plugins>
       <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.2.1</version>
+        <configuration>
+	  <skipAssembly>true</skipAssembly>
+        </configuration>
+      </plugin>
+      <plugin>
 	<groupId>org.apache.rat</groupId>
 	<artifactId>apache-rat-plugin</artifactId>
 	<version>0.7</version>
