--- a/hedwig-protocol/pom.xml
+++ b/hedwig-protocol/pom.xml
@@ -48,6 +48,13 @@
     <defaultGoal>install</defaultGoal>
     <plugins>
       <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.2.1</version>
+        <configuration>
+	  <skipAssembly>true</skipAssembly>
+        </configuration>
+      </plugin>
+      <plugin>
 	<groupId>org.apache.rat</groupId>
 	<artifactId>apache-rat-plugin</artifactId>
 	<version>0.7</version>
