--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -123,6 +123,15 @@
         </configuration>
       </plugin>
       <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.2.1</version>
+        <configuration>
+          <descriptors>
+	    <descriptor>../src/assemble/bin.xml</descriptor>
+          </descriptors>
+        </configuration>
+      </plugin>
+      <plugin>
 	<artifactId>maven-dependency-plugin</artifactId>
 	<executions>
 	  <execution>
