--- a/hedwig-server/pom.xml
+++ b/hedwig-server/pom.xml
@@ -36,7 +36,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.8.1</version>
-      <scope>compile</scope>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -127,6 +127,15 @@
 	    <exclude>**/p12.pass</exclude>
 	  </excludes>
 	</configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.2.1</version>
+        <configuration>
+          <descriptors>
+	    <descriptor>../src/assemble/bin.xml</descriptor>
+          </descriptors>
+        </configuration>
       </plugin>
 <!--
       <plugin>
