--- a/pom.xml
+++ b/pom.xml
@@ -92,8 +92,8 @@
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.2.1</version>
         <configuration>
+	  <tarLongFileMode>gnu</tarLongFileMode>
           <descriptors>
-            <descriptor>src/assemble/bin.xml</descriptor>
             <descriptor>src/assemble/src.xml</descriptor>
           </descriptors>
         </configuration>
