--- a/bookkeeper-benchmark/pom.xml
+++ b/bookkeeper-benchmark/pom.xml
@@ -40,6 +40,16 @@
 	  <skipAssembly>true</skipAssembly>
         </configuration>
       </plugin>
+      <plugin>
+      	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-surefire-plugin</artifactId>
+	<version>2.9</version>
+	<configuration>
+          <systemPropertyVariables>
+            <test.latency.file>target/latencyDump.dat</test.latency.file>
+          </systemPropertyVariables>
+	</configuration>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
