BOOKKEEPER-274: Hedwig cpp client library should not link to cppunit which is just used for test. (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1349423 13f79535-47bb-0310-9956-ffa450edef68

--- a/hedwig-client/src/main/cpp/configure.ac
+++ b/hedwig-client/src/main/cpp/configure.ac
@@ -26,7 +26,7 @@ AC_LANG([C++])
 AC_CONFIG_FILES([Makefile lib/Makefile test/Makefile hedwig-0.1.pc])
 AC_PROG_LIBTOOL
 AC_CONFIG_MACRO_DIR([m4])
-PKG_CHECK_MODULES([DEPS], [liblog4cxx protobuf cppunit])
+PKG_CHECK_MODULES([DEPS], [liblog4cxx protobuf])
 PKG_CHECK_MODULES([TESTDEPS], [cppunit])
 
 AX_BOOST_BASE
