--- a/bookkeeper-benchmark/pom.xml
+++ b/bookkeeper-benchmark/pom.xml
@@ -45,6 +45,7 @@
 	<artifactId>maven-surefire-plugin</artifactId>
 	<version>2.9</version>
 	<configuration>
+	  <argLine>-Xmx1G -Djava.net.preferIPv4Stack=true</argLine>
           <systemPropertyVariables>
             <test.latency.file>target/latencyDump.dat</test.latency.file>
           </systemPropertyVariables>
