--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -118,7 +118,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.9</version>
         <configuration>
-          <argLine>-Xmx1G</argLine>
+          <argLine>-Xmx1G -Djava.net.preferIPv4Stack=true</argLine>
           <forkMode>pertest</forkMode>
         </configuration>
       </plugin>
