--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
   <packaging>pom</packaging>
   <name>bookkeeper</name>
   <modules>
+    <module>compat-deps</module>
     <module>hedwig-client</module>
     <module>hedwig-server</module>
     <module>hedwig-protocol</module>
