BOOKKEEPER-322: New protobufs generates findbugs errors (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1355083 13f79535-47bb-0310-9956-ffa450edef68

--- a/hedwig-protocol/pom.xml
+++ b/hedwig-protocol/pom.xml
@@ -65,6 +65,13 @@
 	  </excludes>
 	</configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <configuration>
+          <excludeFilterFile>${basedir}/src/main/resources/findbugsExclude.xml</excludeFilterFile>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <profiles>
