--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -150,6 +150,24 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.rat</groupId>
+        <artifactId>apache-rat-plugin</artifactId>
+        <version>0.7</version>
+        <configuration>
+          <excludes>
+            <!-- exclude generated file //-->
+            <exclude>**/DataFormats.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <configuration>
+          <excludeFilterFile>${basedir}/src/main/resources/findbugsExclude.xml</excludeFilterFile>
+        </configuration>
+      </plugin>
+      <plugin>
 	<artifactId>maven-dependency-plugin</artifactId>
 	<executions>
 	  <execution>
