--- a/hedwig-client/src/main/cpp/scripts/log4cxx.conf
+++ b/hedwig-client/src/main/cpp/scripts/log4cxx.conf
@@ -26,24 +26,18 @@ log4j.appender.rootAppender.layout=org.apache.log4j.BasicLayout
 log4j.appender.hedwig=org.apache.log4j.ConsoleAppender
 #log4j.appender.hedwig.fileName=./testLog.log
 log4j.appender.hedwig.layout=org.apache.log4j.PatternLayout
-log4j.appender.hedwig.layout.ConversionPattern=[%d{%H:%M:%S.%l}] %t %c %p - %m%n
-log4j.appender.hedwig.layout=org.apache.log4j.PatternLayout
-log4j.appender.hedwig.layout.ConversionPattern=%.5m%n
+log4j.appender.hedwig.layout.ConversionPattern=[%d{%H:%M:%S.%l}] %t %p %c - %m%n
 
 log4j.appender.hedwigtest=org.apache.log4j.ConsoleAppender
 #log4j.appender.hedwig.fileName=./testLog.log
 log4j.appender.hedwigtest.layout=org.apache.log4j.PatternLayout
-log4j.appender.hedwigtest.layout.ConversionPattern=[%d{%H:%M:%S.%l}] %c %p - %m%n
-log4j.appender.hedwigtest.layout=org.apache.log4j.PatternLayout
-log4j.appender.hedwigtest.layout.ConversionPattern=%.5m%n
+log4j.appender.hedwigtest.layout.ConversionPattern=[%d{%H:%M:%S.%l}] %t %p %c - %m%n
 
 # category
-log4j.category.hedwig=INFO, hedwig
-log4j.rootCategory=INFO
+log4j.category.hedwig=OFF, hedwig
+log4j.category.hedwigtest=OFF, hedwigtest
+
+log4j.rootCategory=OFF
 
 #log4j.category.hedwig.channel=ERROR
-log4j.category.hedwig.util=ERROR
-log4j.category.hedwigtest.servercontrol=ERROR
 
-log4j.category.hedwigtest=INFO, hedwigtest
-log4j.rootCategory=INFO
